# libtailscale

./: .gitignore  Cargo.toml  README.md  socketpair_handler.c  socketpair_handler.h  tailscale.c  tailscale.go
.github/workflows/: ruby.yml  rustdocs.yml  rusttest.yml  sourcepkg.yml  test.yml
platform/: tailscale_unix.go  tailscale_windows.go
rust/: Cargo.toml  build.rs
rust/examples/: echo_client.rs  echo_server.rs
rust/src/: lib.rs  sys.rs
