[package]
name = "tsnet"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Compile Tailscale into your program and get an entirely userspace IP address on a tailnet."
repository = "https://github.com/badboy/libtailscale"

build = "rust/build.rs"
include = [
  "/LICENSE",
  "/README.md",
  "/go.mod",
  "/go.sum",
  "/tailscale.go",
  "/tailscale.c",
  "/tailscale.h",
  "/rust/src",
  "/rust/examples",
  "/rust/build.rs",
]

[lib]
path = "rust/src/lib.rs"

[[example]]
name = "echo_client"
path = "rust/examples/echo_client.rs"

[[example]]
name = "echo_server"
path = "rust/examples/echo_server.rs"

[dependencies]
hyper = { version = "1.1.0", optional = true, features = ["server"] }
log = { version = "0.4.20", default-features = false }
nix = "0.27.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", optional = true, features = ["rt", "net"] }

[dev-dependencies]
env_logger = "0.11.1"

[features]
default = []
tokio = ["dep:tokio", "dep:hyper"]
